# Copyright 2021 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

assert(is_ios)

import("//lynx/core/Lynx.gni")

group("iOS") {
  if (build_lynx_dylib) {
    deps = [ "//lynx/platform/darwin/ios/lynx:lynx_podspec" ]
  }
}
