# Copyright 2022 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../../testing/test.gni")
import("../../../Lynx.gni")
import("../../jscache/quickjs/quickjs_cache.gni")
import("build.gni")

lynx_core_source_set("quickjs") {
  sources = lynx_jsi_quickjs_sources_path
  sources += jscache_quickjs_sources

  deps = [
    "../../../../base/src:base_log_headers",
    "../../jscache:jscache",
  ]

  if (is_mac || is_ios || is_linux) {
    deps += [ "../../../../third_party/quickjs" ]
  }
}

unittest_set("quickjs_unittests_testset") {
  sources = [
    "../../jscache/js_cache_manager_unittest.cc",
    "../../jscache/js_cache_tracker_unittest.cc",
    "../../jscache/js_cache_tracker_unittest.h",
    "quickjs_helper_unittest.cc",
    "quickjs_runtime_unittest.cc",
  ]
  sources += jscache_quickjs_unittest_sources

  configs = [ "../../jscache:jscache_config" ]

  deps = [ ":quickjs" ]
}
