# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../harmony.gni")
import("source.gni")

lynx_image_service_source_set("lynx_image_service_source") {
  include_dirs = [ imageknife_include_dir ]
}

if (enable_harmony_shared) {
  lynx_harmony_type = "shared_library"
} else {
  lynx_harmony_type = "source_set"
}

target(lynx_harmony_type, "lynx_image_service") {
  output_name = "lynx_image_service"

  deps = [
    ":lynx_image_service_source",
    "../../../../base/platform/harmony:lynx_base",
  ]

  lib_dirs = [ imageknife_native_lib_dir ]
  libs = [ "imageknifepro" ]
}
